--- a/index.ejs
+++ b/index.ejs
@@ -20,6 +20,7 @@
                     <td><%=data.msg %></td>
                 </tr>
             </table>
+            <p>your last massage:<%= cookie_data%></p>
             <form method="post" action="/">
             <div class="form-group">
                 <label for="msg">伝言を入力するフォーム</label>
